--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                 </li>
                 <br>
-                <hr style="border: 2px blue solid;">
+                <hr style="border: 2px black solid;">
                 <!-- second project -->
                 <li>
                     <h3>Web Page with Html&Css</h3>
@@ -113,7 +113,7 @@
 
                 </li>
                 <br>
-                <hr style="border: 2px blue solid;">
+                <hr style="border: 2px black solid;">
                 <!-- third project -->
                 <li>
                     <h3>Web site with Html&Css</h3>
@@ -160,7 +160,7 @@
         </section>
     </main>
 
-    <hr style="border: 2px blue solid;">
+    <hr style="border: 2px black solid;">
     <!-- contact me section -->
     <footer>
         <section>
